--- a/project_draft1/style.css
+++ b/project_draft1/style.css
@@ -94,7 +94,7 @@ body {
     border: 3px solid orange;
   }
 
-
+ /*below this is Aucher's code that I need to fix/
   /* Table styles */
   thead,
   tbody tr {
