--- a/project_draft1/style.css
+++ b/project_draft1/style.css
@@ -10,7 +10,6 @@ body {
     grid-template-rows: 2fr, 1fr, 1fr, 1fr, 2fr, 2fr;
     column-gap: 1em;
     row-gap: 1em;
-    border: 5px solid palevioletred;
   }
   
   #introduction {
@@ -55,6 +54,7 @@ body {
     grid-row-end: 4;
     grid-column-start: 2;
     grid-column-end: 3;
+    width:100%;
     border: 3px solid violet;
   }
 
