--- a/project_draft1/style.css
+++ b/project_draft1/style.css
@@ -1,6 +1,6 @@
 body {
     /* ref: https://fonts.google.com/specimen/Source+Sans+Pro?selection.family=Source+Sans+Pro */
-    font-family: 'Lato', sans-serif;
+    font-family: 'Antonio', sans-serif;
     padding: 1em 3em;
   }
   
